k8s_infra/auth0.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth0-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: auth0
  template:
    metadata:
      labels:
        component: auth0
    spec:
      containers:
      - name: auth0-pod
        image: flagprotectors/auth0:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: auth0-clusterip
spec:
  type: ClusterIP
  selector:
    component: auth0
  ports:
  - port: 3002
    targetPort: 5000
