k8s_infra/auth0saml.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth0saml-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: auth0saml
  template:
    metadata:
      labels:
        component: auth0saml
    spec:
      containers:
      - name: auth0saml-pod
        image: flagprotectors/auth0saml:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: auth0saml-clusterip
spec:
  type: ClusterIP
  selector:
    component: auth0saml
  ports:
  - port: 3003
    targetPort: 8080
