k8s_infra/ingress_service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    name: ingress-service
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-clusterip
            port: 
              number: 3000
      - pathType: Prefix
        path: "/oauth/linkedin"
        backend:
          service:
            name: frontend-clusterip
            port: 
              number: 3000
